# cortex

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  autopilot-log.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: App.test.tsx  App.tsx  global.css
client/hooks/: useBackfillProgress.test.tsx  useBackfillProgress.ts  usePreview.test.tsx  usePreview.ts  useSpaceLabelingProgress.ts  useTauri.test.ts  useTauri.test.tsx  useTauri.ts
client/lib/: format.ts  icons.ts  mock-data.ts  stores.test.ts  (+5 more)
scripts/: download-ner-model.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.planning/: config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  openai.rs  retry.rs  ruvllm.rs  service.rs  stream.rs
src-tauri/src/auth/: commands.rs  loopback.rs  mod.rs  oauth.rs  pkce.rs
src-tauri/src/chat/: commands.rs  engine.rs  mod.rs  session_store.rs
src-tauri/src/commands/: ai.rs  analytics.rs  documents.rs  entities.rs  folders.rs  mod.rs  ontology.rs  relations.rs  settings.rs  spaces.rs
src-tauri/src/graph/: edges.rs  entity_store.rs  mod.rs  ontology_store.rs  related.rs  triple_store.rs
src-tauri/src/intelligence/: analytics.rs  mod.rs  reranker.rs  sona_bridge.rs
src-tauri/src/pipeline/: backfill.rs  embedder.rs  entities.rs  entity_normalizer.rs  hasher.rs  indexer.rs  mod.rs  ontology_bootstrap.rs  parser.rs  pass1_pattern_extractor.rs  pass2_llm_refiner.rs  pass3_relation_extractor.rs  two_pass_extractor.rs
src-tauri/src/saved_searches/: commands.rs  mod.rs  store.rs
src-tauri/src/search/: filters.rs  highlight.rs  mod.rs  query.rs
src-tauri/src/spaces/: clustering.rs  fingerprint.rs  hyp_index.rs  label_cache.rs  llm_labeler.rs  manager.rs  mod.rs  naming.rs  subspace_detector.rs
src-tauri/src/watcher/: mod.rs  registry.rs  worker.rs
src-tauri/tests/fixtures/: aliases.json
(+365 files in other folders)
