[package]
name = "cortex"
version = "0.1.0"
description = "Cortex - Self-Organizing Document Intelligence"
authors = []
license = ""
repository = ""
default-run = "cortex"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cortex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
ruvector-core = { path = "../../experiments/ruvector/crates/ruvector-core" }
ruvector-collections = { path = "../../experiments/ruvector/crates/ruvector-collections" }
ruvector-filter = { path = "../../experiments/ruvector/crates/ruvector-filter" }
ruvector-sona = { path = "../../experiments/ruvector/crates/sona" }
ruvector-attention = { path = "../../experiments/ruvector/crates/ruvector-attention", default-features = false }
ruvector-hyperbolic-hnsw = { path = "../../experiments/ruvector/crates/ruvector-hyperbolic-hnsw", default-features = false }
# 11.8-06: local LLM inference (Metal-accelerated on Apple Silicon). Path dep — no crates.io
# supply-chain surface. Feature list per 11.8-01-AUDIT.md "Recommended Cargo features".
ruvllm = { path = "../../experiments/ruvector/crates/ruvllm", default-features = false, features = ["candle", "gguf-mmap", "async-runtime"] }
fastembed = "5"
notify-debouncer-mini = "0.4"
pdf-extract = "0.10"
docx-rust = "0.1"
calamine = { version = "0.24", features = ["dates"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
subtle = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
digest = "0.10"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json"] }
dateparser = "0.3.1"
iban_validate = "5.0.1"
verhoeff = "1.0.0"
luhn = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
